<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.quarkiverse</groupId>
        <artifactId>quarkiverse-parent</artifactId>
        <version>21</version>
    </parent>
    <groupId>io.quarkiverse.roq</groupId>
    <artifactId>quarkus-roq-project-parent</artifactId>
    <version>999-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Quarkus Roq - Project - Parent</name>
    <description>Generate static websites out of your Quarkus web application.</description>

    <modules>
        <module>roq-common</module>
        <module>roq-generator</module>
        <module>roq-editor</module>
        <module>roq-data</module>
        <module>roq-frontmatter</module>
        <module>roq</module>
        <module>roq-testing</module>
        <module>roq-plugin</module>
        <module>roq-theme</module>
        <module>roq-cli</module>
    </modules>

    <scm>
        <connection>scm:git:git@github.com:quarkiverse/quarkus-roq.git</connection>
        <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-roq.git</developerConnection>
        <url>https://github.com/quarkiverse/quarkus-roq</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <compiler-plugin.version>3.15.0</compiler-plugin.version>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus.version>3.35.1</quarkus.version>
        <quarkus-qute-web.version>3.4.5</quarkus-qute-web.version>
        <asciidoctorj.version>3.0.1</asciidoctorj.version><asciidoctorj-diagram.version>3.2.1</asciidoctorj-diagram.version>
        <quarkus-web-bundler.version>2.3.1</quarkus-web-bundler.version>
        <asciidoc-java.version>1.2.14</asciidoc-java.version>
        <jandex.version>3.5.3</jandex.version>
        <jsoup.version>1.22.2</jsoup.version>
        <assertj.version>3.27.7</assertj.version>
        <raclette.version>0.1.0.CR3</raclette.version>
    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.mvnpm</groupId>
                <artifactId>raclette</artifactId>
                <version>${raclette.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                </plugin>
                <plugin>
                    <groupId>io.smallrye</groupId>
                    <artifactId>jandex-maven-plugin</artifactId>
                    <version>${jandex.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                    <configuration>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-config-doc-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>docs</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>docs</module>
            </modules>
        </profile>
        <profile>
            <id>it</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>blog</module>
            </modules>
        </profile>
    </profiles>

</project>
